--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,12 @@ __pycache__/
 # C extensions
 *.so
 
+#Design documentation
+docs/
+*.doc
+*.docx
+*.txt
+
 # Distribution / packaging
 .Python
 build/
